# sgl-kernel-npu_fork

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  build.sh  config.ini  install.sh
csrc/: .clang-format  CMakeLists.txt  pybind_extension.cpp  pytorch_extensions.cpp
csrc/alloc_extend/op_host/: alloc_extend_tiling.cpp  alloc_extend_tiling.h
csrc/alloc_extend/op_kernel/: alloc_extend_kernel.cpp
csrc/assign_cache_op/op_host/: assign_cache.cpp  tiling_data.h
csrc/assign_cache_op/op_kernel/: assign_cache_op.cpp
csrc/batch_matmul_transpose/op_host/: batch_matmul_transpose.cpp
csrc/batch_matmul_transpose/op_host/tiling/: tiling_data.cpp  tiling_data.h
csrc/batch_matmul_transpose/op_kernel/: batch_matmul_transpose_kernel.cpp
csrc/build_tree/: README.md
csrc/build_tree/op_host/: build_tree.cpp  build_tree_tiling.h
csrc/build_tree/op_kernel/: build_tree_kernel.cpp
csrc/cache_location_assign/op_host/: cache_loc_assign.cpp
csrc/cache_location_assign/op_host/tiling/: assign_cache_tiling.h  cache_loc_assign.h
csrc/cache_location_assign/op_kernel/: cache_loc_assign_kernel.cpp  cache_loc_assign_kernel_int32.cpp
csrc/causal_conv1d/op_host/: causal_conv1d.cpp  causal_conv1d.h
csrc/causal_conv1d/op_host/stub/: aclrtlaunch_causal_conv1d_bfloat16_t.h  aclrtlaunch_causal_conv1d_half.h
csrc/causal_conv1d/op_host/tiling/: causal_conv1d_tiling.h
csrc/causal_conv1d/op_kernel/: causal_conv1d.cpp  causal_conv1d.h  causal_conv1d_common.h  causal_conv1d_tiling_data.h
csrc/causal_conv1d_update/: CMakeLists.txt
csrc/causal_conv1d_update/op_host/: causal_conv1d_update.cpp  causal_conv1d_update.h
csrc/causal_conv1d_update/op_host/stub/: aclrtlaunch_causal_conv1d_update_bfloat16_t.h  aclrtlaunch_causal_conv1d_update_half.h
csrc/causal_conv1d_update/op_host/tiling/: causal_conv1d_update_tiling.h
csrc/causal_conv1d_update/op_kernel/: causal_conv1d_update.cpp  causal_conv1d_update.h  causal_conv1d_update_base.h  causal_conv1d_update_struct.h  causal_conv1d_update_tilingdata.h
csrc/deepep/: CMakeLists.txt  common.hpp  config.cpp  config.hpp  deep_ep.cpp  deep_ep.hpp  event.hpp  exception.hpp  pybind_extension.cpp  pytorch_npu_helper.hpp  shmem.hpp
csrc/deepep/ops/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh
csrc/deepep/ops/cmake/: config.cmake  device_task.cmake  func.cmake  intf.cmake
csrc/deepep/ops/kernels/: comm_group.h  datacopy.h  moe_dispatch.cpp  moe_dispatch.h  moe_dispatch_tiling.h  notify_dispatch.cpp  notify_dispatch.h  notify_dispatch_tiling.h  sync_collectives.h
csrc/deepep/ops/op_host/: CMakeLists.txt  cam_moe_combine_normal.cpp  cam_moe_combine_normal_tiling.cc  cam_moe_dispatch_normal.cpp  cam_moe_dispatch_normal_tiling.cc  dispatch_ffn_combine_bf16_def.cpp  dispatch_ffn_combine_bf16_infer.cpp  dispatch_ffn_combine_bf16_tiling.cpp  dispatch_ffn_combine_def.cpp  dispatch_ffn_combine_infer.cpp  dispatch_ffn_combine_tiling.cpp  dispatch_layout.cpp  dispatch_layout_tiling.cc  error_log.h  fallback_moe_distribute_dispatch_v2.cpp  fused_deep_moe.cpp  fused_deep_moe_infer.cpp  fused_deep_moe_tiling.cpp  mc2_tiling_utils.h  moe_distribute_combine_v2_def.cpp  moe_distribute_combine_v2_tiling.cpp  moe_distribute_dispatch_infer_v2.cpp  moe_distribute_dispatch_v2_def.cpp  moe_distribute_dispatch_v2_tiling.cpp  notify_dispatch.cpp  notify_dispatch_tiling.cc  tiling_args.h
csrc/deepep/ops/op_kernel/: CMakeLists.txt  cam_moe_combine_normal.cpp  cam_moe_combine_normal.h  cam_moe_combine_normal_tiling.h  cam_moe_dispatch_normal.cpp  cam_moe_dispatch_normal.h  cam_moe_dispatch_normal_tiling.h  check_winsize.h  comm_args.h  data_copy.h  dispatch_ffn_combine.cpp  dispatch_ffn_combine.h  dispatch_ffn_combine_bf16.cpp  dispatch_ffn_combine_bf16.h  dispatch_ffn_combine_bf16_kernel.hpp  dispatch_ffn_combine_bf16_tiling.h  dispatch_ffn_combine_kernel.hpp  dispatch_ffn_combine_tiling.h  dispatch_layout.cpp  dispatch_layout.h  dispatch_layout_a2.h  fused_deep_moe.cpp  fused_deep_moe.h  fused_deep_moe_base.h  fused_deep_moe_tiling.h  moe_distribute_base.h  moe_distribute_combine_tiling.h  moe_distribute_combine_v2.cpp  moe_distribute_combine_v2.h  moe_distribute_combine_v2_tiling.h  moe_distribute_dispatch_tiling.h  moe_distribute_dispatch_v2.cpp  moe_distribute_dispatch_v2.h  moe_distribute_dispatch_v2_tiling.h  notify_dispatch.cpp  notify_dispatch.h  notify_dispatch_tiling.h
csrc/deepep/ops/scripts/: install.sh  upgrade.sh
csrc/deepep/ops/tiling/: CMakeLists.txt  error_log.h  moe_dispatch.cpp  moe_dispatch_tiling.cc  notify_dispatch_tiling.cc
csrc/deepep/ops2/: CMakeLists.txt  CMakePresets.json  README.md  build.sh
csrc/deepep/ops2/cmake/: config.cmake  device_task.cmake  func.cmake  makeself.cmake
csrc/deepep/ops2/op_host/: CMakeLists.txt  cam_h_comm_moe_distribute_dispatch.cpp  cam_h_comm_moe_distribute_dispatch_tiling.cpp  cam_moe_combine_normal_tiling.cc  cam_moe_dispatch_normal.cpp  cam_moe_dispatch_normal_tiling.cc  dispatch_layout.cpp  dispatch_layout_tiling.cc  error_log.h  (+16 more)
csrc/helloworld/: README.md
csrc/helloworld/op_host/: helloworld.cpp
csrc/helloworld/op_kernel/: kernel_helloworld.cpp
csrc/lora/op_host/: bgmv_expand.cpp  bgmv_shrink.cpp  sgemmc_expand.cpp  sgemmc_shrink.cpp  sgmv_expand.cpp  sgmv_shrink.cpp
csrc/lora/op_kernel/: bgmv_expand_kernel.cpp  bgmv_shrink_kernel.cpp  lora_common_kernel.h  sgemmc_expand_kernel.cpp  sgemmc_shrink_kernel.cpp  sgemmv_expand_kernel.cpp  sgemmv_shrink_kernel.cpp  sgmv_expand_kernel.cpp  sgmv_shrink_kernel.cpp
csrc/mla_preprocess/op_host/: mla_preprocess.cpp
csrc/mla_preprocess/op_kernel/: mla_preprocess.h  mla_preprocess_kernel.cpp  mla_preprocess_mix_bf16.hpp  mla_preprocess_mix_fp16.hpp
csrc/recurrent_gated_delta_rule/op_host/: recurrent_gated_delta_rule.cpp
csrc/recurrent_gated_delta_rule/op_kernel/: recurrent_gated_delta_rule_kernel.cpp  tensorutils.h
csrc/transfer_kv_dim_exchange/op_host/: transfer_kv_dim_exchange.cpp
csrc/utils/: common.h  common_tiling.h  defines.h  torch_helper.h  version.h
csrc/utils/kernel/: common_tiling_kernel.h
(+526 files in other folders)
